# hashcalc

./: .gitignore  Cargo.toml  README.md  deny.toml  git.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
installer/: hashcalc.iss
src/: main.rs
