[package]
name = "hashcalc"
version = "0.2.7"
authors = ["Fabrice Corraire <antidote1911@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
include = ["src/**/*", "LICENSE", "README.md"]
homepage = "https://github.com/Antidote1911"
repository = "https://github.com/Antidote1911/hashcalc"
description = """\
    hashcalc collection of file hashing algorithms all bundled in a single tool. Like sha256sum, \
    b3sum and others. \
"""
categories = ["command-line-utilities", "filesystem"]
keywords = ["file", "hashing", "utility"]

[dependencies]
anyhow = "1.0.75"
blake2 = "0.10.6"
blake3 = { version = "1.4.1", features = ["traits-preview"] }
clap = { version = "4.4.3", features = ["derive"] }
clap_complete = "4.4.1"
clap_mangen = "0.2.13"
digest = "0.10.7"
fsb = "0.1.3"
gost94 = "0.10.4"
groestl = "0.10.1"
hex = "0.4.3"
md-5 = "0.10.5"
md2 = "0.10.2"
md4 = "0.10.2"
rayon = "1.7.0"
ripemd = "0.1.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
shabal = "0.4.1"
sm3 = "0.4.2"
streebog = "0.10.2"
strum = { version = "0.25.0", features = ["derive"] }
tiger = "0.2.1"
whirlpool = "0.10.4"

[profile.release]
lto = true
